force-app/main/default/src/objects/PJN_New_Contact_Info_Fields_Setting__mdt/PJN_New_Contact_Info_Fields_Setting__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Account Search (New Contact Information)
Purpose: Defines the record-type specific fields that appear on the New Contact Information screen after running Account Search.
Metadata Relationship(s): --
Created by Mavens: Yes</description>
    <label>New Contact Info Fields Setting</label>
    <pluralLabel>New Contact Info Fields Settings</pluralLabel>
</CustomObject>