force-app/main/default/src/objects/PJN_New_Contact_Info_Fields_Setting__mdt/fields/PJN_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>