force-app/main/default/src/objects/PJN_New_Contact_Info_Fields_Setting__mdt/fields/PJN_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Record_Type__c</fullName>
    <label>Record Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PJN_Address</fullName>
            </value>
            <value>
                <fullName>PJN_Phone</fullName>
            </value>
            <value>
                <fullName>PJN_Email</fullName>
                <default>true</default>
                <label>PJN_Email</label>
            </value>
            <value>
                <fullName>PJN_Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>