force-app/main/default/src/objects/PJN_New_Contact_Info_Fields_Setting__mdt/fields/PJN_Required__c.field-meta.xml
<CustomField>
    <fullName>PJN_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>