force-app/main/default/src/objects/PJN_New_Contact_Info_Fields_Setting__mdt/listViews/PJN_Address_Contact_Info_Fields_Settings.listView-meta.xml
<ListView>
    <fullName>PJN_Address_Contact_Info_Fields_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Field_API_Name__c</columns>
    <columns>PJN_Type__c</columns>
    <columns>PJN_Record_Type__c</columns>
    <columns>PJN_Order__c</columns>
    <columns>PJN_Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PJN_Record_Type__c</field>
        <operation>equals</operation>
        <value>PJN_Address</value>
    </filters>
    <label>Address Contact Info Fields Settings</label>
    <language>en_US</language>
</ListView>